--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ Flask==2.0.1
 Flask-Cors==3.0.10
 gunicorn==20.1.0
 itsdangerous==2.0.1
-Jinja2==2.11.2
+Jinja2
 joblib==1.0.1
 MarkupSafe==2.0.1
 pytz==2021.1
@@ -14,5 +14,5 @@ scikit-learn==0.24.2
 scipy==1.7.1
 six==1.16.0
 virtualenv==20.7.2
-Werkzeug==1.0.1
+Werkzeug
 wincertstore==0.2
